--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "@antv/g6": "^1.2.8",
+    "@antv/g6-editor": "^1.2.0",
+    "@antv/g6-plugins": "^1.0.9",
     "axios": "0.18.1",
-    "element-ui": "2.7.2",
+    "element-ui": "^2.12.0",
+    "gojs": "^2.1.0",
+    "js-base64": "^2.5.1",
     "js-cookie": "2.2.0",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "webpack": "latest"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
