--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@antv/g6": "^1.2.8",
     "@antv/g6-editor": "^1.2.0",
     "@antv/g6-plugins": "^1.0.9",
+    "@riophae/vue-treeselect": "^0.4.0",
     "axios": "0.18.1",
     "element-ui": "^2.12.0",
     "gojs": "^2.1.0",
