--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antv/g6-plugins": "^1.0.9",
     "@riophae/vue-treeselect": "^0.4.0",
     "axios": "0.18.1",
+    "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "gojs": "^2.1.0",
     "js-base64": "^2.5.1",
@@ -30,6 +31,7 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "webpack": "latest"
