--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antv/g6-plugins": "^1.0.9",
     "@riophae/vue-treeselect": "^0.4.0",
     "axios": "0.18.1",
+    "dhtmlx-gantt": "^6.3.7",
     "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "gojs": "^2.1.0",
