--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "gojs": "^2.1.0",
+    "html2canvas": "^1.0.0-rc.5",
     "js-base64": "^2.5.1",
     "js-cookie": "2.2.0",
     "jwt-decode": "^2.2.0",
@@ -33,6 +34,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-print-nb": "^1.5.0",
     "vue-router": "3.0.6",
     "vuex": "3.1.0",
     "webpack": "latest"
