--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html2canvas": "^1.0.0-rc.5",
     "js-base64": "^2.5.1",
     "js-cookie": "2.2.0",
+    "jsbarcode": "^3.11.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "normalize.css": "7.0.0",
